# RayMarching

./: .gitignore  README.md
Readme/: Cubespheresmooth.webm  Fractalsrotation.webm  Mandelbulb.webm
SphereTracingOptimizations/: CMakeLists.txt
SphereTracingOptimizations/ProjectFiles/: BRDFs.h  BVHNode.cpp  BVHNode.h  Camera.h  ColorRGB.h  DataTypes.h  GUI.cpp  GUI.h  Material.h  Matrix.cpp  Matrix.h  Misc.h  Renderer.cpp  Renderer.h  SDFObjects.cpp  SDFObjects.h  Scene.cpp  Scene.h  Scenes.cpp  Scenes.h  SdEngine.cpp  SdEngine.h  Singleton.h  StatTracker.cpp  StatTracker.h  Timer.cpp  Timer.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  main.cpp
source/: BRDFs.h  Camera.h  ColorRGB.h  DataTypes.cpp  DataTypes.h  Material.h  Math.cpp  Math.h  MathHelpers.h  Matrix.cpp  Matrix.h  RayTracer.vcxproj  Renderer.cpp  Renderer.h  SDFObjects.cpp  SDFObjects.h  Scene.cpp  Scene.h  SdEngine.cpp  SdEngine.h  Timer.cpp  Timer.h  Utils.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  benchmark.txt  main.cpp
